<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DelightActivity">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_introoo" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="162dp"
            android:layout_height="40dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="120dp"
            android:paddingStart="40dp"
            android:text="@string/pizza"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgout"
            android:layout_width="28dp"
            android:layout_height="27dp"
            android:layout_marginTop="75dp"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <Button
            android:id="@+id/classic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/classic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/delight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/delight"
            app:layout_constraintStart_toEndOf="@+id/classic"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/favourite"
            app:layout_constraintStart_toEndOf="@+id/delight"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delightt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classic" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="156dp"
            android:layout_height="272dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                app:srcCompat="@drawable/cake1" />

            <TextView
                android:id="@+id/textViewDesc1"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="130dp"
                android:paddingStart="20dp"
                android:text="@string/chicken"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrice1"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="170dp"
                android:text="Large - 3000\nMedium - 2000\nSmall - 1000" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="220dp"
                android:minWidth="64dp"
                android:minHeight="48dp"
                android:text="Buy Now" />
        </androidx.cardview.widget.CardView>

        <!-- Card 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="156dp"
            android:layout_height="272dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/cardView1"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                app:srcCompat="@drawable/cake2" />

            <TextView
                android:id="@+id/textViewDesc2"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="130dp"
                android:paddingStart="20dp"
                android:text="Chicken Triple Treat Pizza"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrice2"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="170dp"
                android:text="Large - 3000\nMedium - 2000\nSmall - 1000" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="220dp"
                android:minWidth="64dp"
                android:minHeight="48dp"
                android:text="Buy Now" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="156dp"
            android:layout_height="272dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                app:srcCompat="@drawable/cake3" />

            <TextView
                android:id="@+id/textViewDesc3"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="130dp"
                android:paddingStart="20dp"
                android:text="Chicken Triple Treat Pizza"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrice3"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="170dp"
                android:text="Large - 3000\nMedium - 2000\nSmall - 1000" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="220dp"
                android:minWidth="64dp"
                android:minHeight="48dp"
                android:text="Buy Now" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="156dp"
            android:layout_height="272dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                app:srcCompat="@drawable/cake4" />

            <TextView
                android:id="@+id/textViewDesc4"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="130dp"
                android:paddingStart="20dp"
                android:text="Chicken Triple Treat Pizza"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrice4"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="170dp"
                android:text="Large - 3000\nMedium - 2000\nSmall - 1000" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="220dp"
                android:minWidth="64dp"
                android:minHeight="48dp"
                android:text="Buy Now" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/bottom_nav_menu" />


    </androidx.constraintlayout.widget.ConstraintLayout>


